test/corpus/comments.txt
================================================================================
Standalone comment
================================================================================

{* ipsum *}
--------------------------------------------------------------------------------
(source_file
  (comment))

================================================================================
Two Standalone comments
================================================================================

{* ipsum *}
{* ipsum *}
--------------------------------------------------------------------------------
(source_file
  (comment)
  (comment))

================================================================================
Two Standalone comments (b)
================================================================================

{* ipsum *} {* ipsum *}
--------------------------------------------------------------------------------
(source_file
  (comment)
  (comment))

================================================================================
comments + inner content
================================================================================
{* ipsum *} a {* ipsum *}
--------------------------------------------------------------------------------
(source_file
  (comment)
  (content)
  (comment))
